[gd_scene load_steps=3 format=3 uid="uid://bxb44ossyy4m3"]

[ext_resource type="Theme" uid="uid://cb2tqos08yhkd" path="res://interface/theme/MinimalUI/MinimalUI.tres" id="1_pvvqj"]
[ext_resource type="Script" path="res://interface/menus/main/settings/video_tab.gd" id="2_m31o5"]

[node name="Video" type="TabBar"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath("../API")
focus_neighbor_right = NodePath("../Audio")
focus_neighbor_bottom = NodePath("HBoxContainer/VBoxContainer2/Fullscreen")
theme = ExtResource("1_pvvqj")
theme_override_font_sizes/font_size = 20
script = ExtResource("2_m31o5")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -105.0
offset_right = 68.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Fullscreen" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
focus_mode = 1
theme_override_font_sizes/font_size = 24
text = "Fullscreen"

[node name="Borderless" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "Borderless"

[node name="Vsync" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "Vsync"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Fullscreen" type="CheckBox" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
focus_neighbor_top = NodePath("../../..")
focus_neighbor_bottom = NodePath("../Borderless")
focus_next = NodePath("../Borderless")

[node name="Borderless" type="CheckBox" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
focus_neighbor_top = NodePath("../Fullscreen")
focus_neighbor_bottom = NodePath("../Vsync")

[node name="Vsync" type="OptionButton" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
focus_neighbor_top = NodePath("../Borderless")
theme = ExtResource("1_pvvqj")
theme_override_font_sizes/font_size = 24
item_count = 4
selected = 1
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1
popup/item_2/text = "Adaptive"
popup/item_2/id = 2
popup/item_3/text = "Mailbox"
popup/item_3/id = 3

[connection signal="toggled" from="HBoxContainer/VBoxContainer2/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer2/Borderless" to="." method="_on_borderless_toggled"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer2/Vsync" to="." method="_on_vsync_item_selected"]
